# peregrine

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .secinclude  .secrets.baseline  .travis.yml  Dockerfile  Jenkinsfile  Jenkinsfile.performance  README.md  TestDockerfile  dev-requirements.txt  dockerrun.bash  dockerrun.sh  nginx.conf  pyproject.toml  release_notes.md  requirements.txt  run.py  run_tests.sh  setup.py  setup.sh
.github/: labeler.yml
.github/workflows/: image_build_push.yaml  integration_tests.yaml
deployment/nginx/: nginx.conf  uwsgi.conf
deployment/uwsgi/: uwsgi.ini
deployment/wsgi/: gunicorn.conf.py  wsgi.py
docs/: quickstart_helm.md
openapis/: README.md  swagger.yaml
peregrine/: api.py  config.py  dev_settings.example.py  dev_settings.py  dictionary.py  errors.py  fast_api.py  globals.py  models.py  test_settings.py  version_data.py
peregrine/auth/: __init__.py
peregrine/blueprints/: __init__.py  coremetadata.py  datasets.py
peregrine/repositories/: annotations.py  cases.py  files.py  projects.py  quick.py  reports.py
peregrine/resources/New Folder With Items/analysis/: v0.py
peregrine/resources/New Folder With Items/index/: v0.py
peregrine/resources/New Folder With Items/manifest/: __init__.py  v0.py
peregrine/resources/New Folder With Items/misc/: v0.py
peregrine/resources/submission/: __init__.py  constants.py  files.py  util.py
peregrine/resources/submission/graphql/: __init__.py  counts.py  introspection_query.txt  node.py  root.py  transaction.py  traversal.py  util.py
peregrine/routes/: __init__.py  coremetadata.py  datasets.py
peregrine/services/: __init__.py  annotations.py  cases.py  files.py  logging.py  projects.py  quick.py  report.py  ui.py  users.py
peregrine/services/analysis/: __init__.py  survival.py
peregrine/utils/: __init__.py  json2csv.py  payload.py  pybdbag.py  pyutils.py  request.py  response.py  s3.py  scheduling.py
scripts/: utils.inc
scripts/git_hooks/: commit-msg.py
tests/: api.py  auth_mock.py  auth_test.py  ci_commands_script.sh  conftest.py  legacy_test.py  oauth_test.py  system_test.py  test_coremetadata.py  utils.py
tests/analysis/: survival_test.py
tests/data/: annotations.json  cases.json  files.json  projects.json
tests/esutils/: request_test.py  response_test.py  search_test.py
tests/graphql/: conftest.py  test_coremetadata.py  test_datasets.py  test_graphql.py  test_transaction_logs.py  utils.py
tests/graphql/data/: aliquot.json  all_samples_props.gql  bcr_example1.xml  bcr_invalid1.xml  bcr_invalid_schema_location1.xml  bcr_invalid_schema_location2.xml  bcr_invalid_structure.xml  biospec1.json  biospec2.json  biospecimen_props_and_links.gql  bulk1.json  case.json  case1.json  case2.json  case3.json  case4.json  case5.json  clinical1.xml  clinical2.xml  clinical3.xml  databundle1.json  diagnosis.tsv  experiment.json  file.json  file_empty_link.tsv  files.tsv  program.json  project.json  read_group.json  read_group_invalid.json  sample.json  samples1.csv  samples1.tsv  samples_invalid.csv  single_case_tree.gql  single_case_tree_with_fragments.gql  submitted_unaligned_reads.json  submitted_unaligned_reads_invalid.json  whitespace.tsv
tests/submission/: test_endpoints.py
tests/submission/data/: all_props.gql  case.json  experiment.json  just_ids.gql  samples2.tsv
tests/submission/graphql/: conftest.py  test_graphql.py  test_transaction_logs.py
tests/utils/: json2csv_test.py  utils_response_test.py  utils_test.py
