[tool.poetry]
name = "peregrine"
version = "3.2.4"
description = "Query interface to get insights into data in Gen3 Commons"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/peregrine"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.10"
authutils = ">=7.1.0"
datamodelutils = ">=1.0"
defusedxml = ">=0.5"
dictionaryutils = ">=3.4.10"
gen3dictionary = ">=2.0.3"
simplejson = ">=3.8"
stopit = ">=1.1"
Flask = ">=2.2.5"
Flask-Cors = "<7"
gen3authz = "<3"
dicttoxml = ">=1.5"
SQLAlchemy = "1.3.*"
graphene = ">=2.0,<3"
promise = ">=2.2"
Flask-SQLAlchemy-Session = ">=1.1"
psqlgraph = ">=3.0"
cdispyutils = ">=2.0.1"
cdiserrors = ">=0.1"
cdislogging = "<2"
requests = ">=2.32.4,<3"
gunicorn = ">=21.2.0"
jinja2 = ">=3.1.5"
setuptools = '*'
cryptography = "^44.0.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
mock = ">=1.0"
pytest-flask = ">=0.15"
pytest-cov = ">=2.8"
indexclient = ">=2.1.1"
sheepdog = {git = "https://git@github.com/uc-cdis/sheepdog.git", rev = "2025.07" }
deptry = "^0.23.1"
boto = "^2.49.0"

[tool.poetry.plugins."peregrine.modules"]
system = "peregrine.api:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
